--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -537,3 +537,6 @@ blockquote {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.overflow-y-hidden {
+    overflow-y: hidden;
+}
