--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -186,6 +186,16 @@
                 }
             }          
         }
+        &.font-sora {
+            .nav-item .nav-link {
+                font-size: 16px;
+                font-weight: 500;
+            }
+            .nav-item .mega-menu .mega-menu-sub a {
+                font-size: 15px;
+                padding: 3px 0;   
+            }
+        }
     }
     .menu-head {
         display: none;
