--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -48,6 +48,12 @@
                 transform: translatex(5px);
             }
         }
+        &.text-gray-900 {
+            a {
+                color: $gray-800;
+                font-weight: 600;
+            }
+        }
     }
     .subscribe-title {
         font-size: clamp(1.25rem, calc(1.25vw + 1.25rem), 2.1rem);
@@ -68,8 +74,8 @@
                 transition: 0.4s;
                 display: flex;
                 svg {
-                    width: 1.1rem;
-                    height: 1.1rem;
+                    width: 1.2rem;
+                    height: 1.2rem;
                     color: white;
                 }
                 &:hover {
