--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./base/reset";
 @import "./base/fonts";
 @import "./base/mixins";
+@import "./base/preloader";
 @import "./components/button";
 @import "./components/nav";
 @import "./components/footer";
