--- a/src/scss/base/_shadow.scss
+++ b/src/scss/base/_shadow.scss
@@ -66,3 +66,6 @@
         }
     }
 }
+.box-shadow-light-cyan {
+    box-shadow: 0 5px 18px #12078f0a, 0 1px 2px #0e094814, 0 0 0 1px #0e09480a, inset 0 0 3px #13276c0a, inset 0 -4px 1px #13276d0f;
+}
